--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "httpx>=0.28.1",
     "ipykernel>=6.30.1",
     "jupyter>=1.1.1",
     "openpyxl>=3.1.5",
     "pandas>=2.3.2",
+    "typer>=0.17.3",
 ]
