--- a/website/compose.yml
+++ b/website/compose.yml
@@ -1,4 +1,13 @@
 services:
+  website:
+    build:
+      context: .
+    ports:
+      - "127.0.0.1:3000:3000"
+    environment:
+      DATABASE_URL: "postgres://postgres:postgres@127.0.0.1:5932/wrenchball"
+      NODE_ENV: "production"
+
   db:
     image: postgres:17
     ports:
