--- a/website/.env.example
+++ b/website/.env.example
@@ -1,2 +1,6 @@
 NODE_ENV="development"
 DATABASE_URL="postgres://postgres:postgres@127.0.0.1:5932/wrenchball"
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+DISCORD_REDIRECT_URI=http://localhost:3000/auth/callback
+SESSION_SECRET=abc123
