utils for connecting to prod, we big data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.3.2",
     "psycopg[binary]>=3.2.9",
+    "python-dotenv>=1.1.1",
     "typer>=0.17.3",
 ]
