--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-router/express": "^7.7.1",
     "@react-router/node": "^7.7.1",
+    "clsx": "^2.1.1",
     "compression": "^1.8.0",
     "drizzle-orm": "~0.36.3",
     "express": "^5.1.0",
@@ -20,7 +21,8 @@
     "postgres": "^3.4.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.1"
+    "react-router": "^7.7.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
