--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,7 @@
     "typecheck": "react-router typegen && tsc -b"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@react-router/express": "^7.7.1",
     "@react-router/node": "^7.7.1",
     "clsx": "^2.1.1",
